--- a/index.html
+++ b/index.html
@@ -8,9 +8,47 @@
 </head>
 <body>
     <header>
-        <h1>We 	&lt;3 Web</h1>
+        <h1>We &lt;3 Web</h1>
     </header>
     <main>
+        <div class="blog-post">
+            <div class="blog-container">
+                <h3>19 september 2023</h3>
+                <h2>Minisynopsium toegankelijkheid</h2>
+              <p>Een minisynopsium over toegankelijkheid op het web. Denk bijvoorbeeld aan toegankelijkheid voor blinde of kleurenblinde mensen, 
+                die gebruik maken van een schermlezer of een hoge contrast setting.</p>
+              <a class="button" href='#' target="_blank">Lees meer</a>
+            </div>
+          </div>
+
+          <div class="blog-post">
+            <div class="blog-container">
+              <h3>6 oktober 2023</h3>
+              <h2>Tim Borst</h2>
+              <p>We &lt;3 Web van Tim Borst waar hij vertelde over zijn werk en zijn ervaringen in het front-end vakgebied.</p>
+              <a class="button" href='#' target="_blank">Lees meer</a>
+            </div>
+          </div>
+
+          <div class="blog-post">
+            <div class="blog-container">
+              <h3>20 oktober 2023</h3>
+              <h2>Ischa Gast</h2>
+              <p>We &lt;3 Web van Ischa Gast waar hij vertelde over toegankelijkheid. Er is nog veel ontwetendheid en teveel websites zijn nog steeds niet goed toegankelijk. 
+                Hij vertelde over hoe je toegankelijkheid op je eigen website kon toepassen. </p>
+              <a class="button" href='#' target="_blank">Lees meer</a>
+            </div>
+          </div>
+
+          <div class="blog-post">
+            <div class="blog-container">
+              <h3>24 november 2023</h3>
+              <h2>Yolijn van der Kolk</h2>
+              <p>We &lt;3 Web van Yolijn van der Kolk waar ze vertelde over NL Design System. Dit is een systeem vol met dingen zoals een styleguide, 
+                componentenblibliotheek, richtlijnen en nog veel meer.</p>
+              <a class="button" href='#' target="_blank">Lees meer</a>
+            </div>
+          </div>
 
     </main>
 </body>
