--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h2>Minisynopsium toegankelijkheid</h2>
               <p>Een minisynopsium over toegankelijkheid op het web. Denk bijvoorbeeld aan toegankelijkheid voor blinde of kleurenblinde mensen, 
                 die gebruik maken van een schermlezer of een hoge contrast setting.</p>
-              <a class="button" href='#' target="_blank">Lees meer</a>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki#aantekeningen-minisynopsium-toegankelijkheid-19-9-2023' target="_blank">Lees meer</a>
             </div>
           </div>
 
@@ -26,7 +26,7 @@
               <h3>6 oktober 2023</h3>
               <h2>Tim Borst</h2>
               <p>We &lt;3 Web van Tim Borst waar hij vertelde over zijn werk en zijn ervaringen in het front-end vakgebied.</p>
-              <a class="button" href='#' target="_blank">Lees meer</a>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki#aantekeningen-we-3-web-van-tim-borst-6-10-2023' target="_blank">Lees meer</a>
             </div>
           </div>
 
@@ -36,7 +36,7 @@
               <h2>Ischa Gast</h2>
               <p>We &lt;3 Web van Ischa Gast waar hij vertelde over toegankelijkheid. Er is nog veel ontwetendheid en teveel websites zijn nog steeds niet goed toegankelijk. 
                 Hij vertelde over hoe je toegankelijkheid op je eigen website kon toepassen. </p>
-              <a class="button" href='#' target="_blank">Lees meer</a>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki#aantekeningen-we-3-web-van-ischa-gast-20-10-2023' target="_blank">Lees meer</a>
             </div>
           </div>
 
@@ -46,7 +46,7 @@
               <h2>Yolijn van der Kolk</h2>
               <p>We &lt;3 Web van Yolijn van der Kolk waar ze vertelde over NL Design System. Dit is een systeem vol met dingen zoals een styleguide, 
                 componentenblibliotheek, richtlijnen en nog veel meer.</p>
-              <a class="button" href='#' target="_blank">Lees meer</a>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki#aantekeningen-we-3-web-van-yolijn-van-der-kolk-24-11-2023' target="_blank">Lees meer</a>
             </div>
           </div>
 
