--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
             </div>
           </div>
 
+          <div class="blog-post">
+            <div class="blog-container">
+              <h3>15 december 2023</h3>
+              <h2>Julia Miocene</h2>
+              <p>We &lt;3 Web van .</p>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki#aantekeningen-we-3-web-van-yolijn-van-der-kolk-24-11-2023' target="_blank">Lees meer</a>
+            </div>
+          </div>
+
     </main>
 </body>
 </html>
