--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <div class="blog-container">
               <h3>15 december 2023</h3>
               <h2>Julia Miocene</h2>
-              <p>We &lt;3 Web van .</p>
-              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki#aantekeningen-we-3-web-van-yolijn-van-der-kolk-24-11-2023' target="_blank">Lees meer</a>
+              <p>We &lt;3 Web van Julia Miocene over haar werk als o.a. CSS animator. Ze vertelde over animatie met CSS en HTML en liet een aantal dingen van haar portfolio aan ons zien. </p>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki#aantekeningen-we-3-web-van-julia-miocene--24-11-2023' target="_blank">Lees meer</a>
             </div>
           </div>
 
