--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
             </div>
           </div>
 
+          <div class="blog-post">
+            <div class="blog-container">
+              <h3>19 januari 2024</h3>
+              <h2>Fenna de Wilde</h2>
+              <p>We &lt;3 Web van Fenna de Wilde over hoe zij toegankelijkheid toepast in haar werk. Ze vertelde over dingen zoals focus states, aria attributes, kleurcontrast, semantiek en meer. </p>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki/We-%E2%9D%A4%EF%B8%8F-Web#aantekeningen-we-3-web-van-fenna-de-wilde-19-1-2024' target="_blank">Lees meer</a>
+            </div>
+          </div>
+
     </main>
 </body>
 </html>
