--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
             </div>
           </div>
 
+          <div class="blog-post">
+            <div class="blog-container">
+              <h3>16 februari 2024</h3>
+              <h2>Simon Riisnæs Dagfinrud</h2>
+              <p>We &lt;3 Web van Simon Riisnæs Dagfinrud over computational design, zijn werk als designer en developer, cases waar hij aan gewerkt heeft en tips. </p>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki/We-%E2%9D%A4%EF%B8%8F-Web#aantekeningen-we-3-web-van-simon-riisn%C3%A6s-dagfinrud-16-2-2024' target="_blank">Lees meer</a>
+            </div>
+          </div>
+
     </main>
 </body>
 </html>
