--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
             </div>
           </div>
 
+          <div class="blog-post">
+            <div class="blog-container">
+              <h3>15 maart 2024</h3>
+              <h2>Justus Sturkenboom</h2>
+              <p>We &lt;3 Web van Justus Sturkenboom over digital gardening en het indieweb </p>
+              <a class="button" href='https://github.com/Annevd/we-love-web-notes/wiki/We-%E2%9D%A4%EF%B8%8F-Web#aantekeningen-we-3-web-van-justus-sturkenboom-15-3-2024' target="_blank">Lees meer</a>
+            </div>
+          </div>
+
     </main>
 </body>
 </html>
