--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 
     <article class="blog-post">
       <div class="blog-container">
+        <h3>24 mei 2024</h3>
+        <h2>Sanne Swagerman</h2>
+        <p>We &lt;3 Web van Sanne Swagerman over haar ervaring als developer en hoe jij je droombaan kan vinden.</p>
+        <a class="button"
+          href='https://github.com/Annevd/we-love-web-notes/wiki/We-%E2%9D%A4%EF%B8%8F-Web#aantekeningen-we-3-web-van-sanne-swagerman-24-5-2024'
+          target="_blank">Lees meer</a>
+      </div>
+    </article>
+
+    <article class="blog-post">
+      <div class="blog-container">
         <h3>26 april 2024</h3>
         <h2>Gwen Bogaert</h2>
         <p>We &lt;3 Web van Gwen Bogaert over "Is it a bug or a feature? Leren tijdens het programmeren."</p>
